--- a/SJCAM/MainPage.xaml
+++ b/SJCAM/MainPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SJCAM"
+	xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -65,7 +66,9 @@
 				</Grid>
 			</SplitView.Pane>
 			<SplitView.Content>
-				<Grid>
+				<Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+					<canvas:CanvasControl x:Name="backgroundCanvas" Draw="backgroundCanvas_Draw" CreateResources="backgroundCanvas_CreateResources" />
+					<!--<Image x:Name="backgroundImage" Source="http://d13fo19pohlmh8.cloudfront.net/media/assets/09e3fc49dbbcf9b40049c1e8ecf068ea.jpeg"/>-->
 					<StackPanel>
 						<TextBlock Text="SJCAM" Style="{StaticResource Title}"/>
 					</StackPanel>
