--- a/SJCAM/SJCAM/App.xaml
+++ b/SJCAM/SJCAM/App.xaml
@@ -4,5 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SJCAM"
     RequestedTheme="Light">
-
+	<Application.Resources>
+		<ResourceDictionary >
+			<ResourceDictionary.MergedDictionaries >
+				<ResourceDictionary Source="Style/Style.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
 </Application>
