--- a/SJCAM/SJCAM/MainPage.xaml
+++ b/SJCAM/SJCAM/MainPage.xaml
@@ -5,9 +5,24 @@
     xmlns:local="using:SJCAM"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+	mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    </Grid>
+		<Image Source="background.jpg" Stretch="UniformToFill" HorizontalAlignment="Center" Loaded="Image_Loaded"/>
+		<Grid>
+			<Grid.RowDefinitions>
+				<RowDefinition Height="Auto" />
+				<RowDefinition />
+			</Grid.RowDefinitions>
+			<!--Connection status-->
+			<StackPanel Orientation="Horizontal" Grid.Row="0" Name="ConnectStatusBar">
+				
+			</StackPanel>
+			
+			<StackPanel Name="MainStack" Grid.Row="1">
+				<TextBlock Style="{StaticResource TitleTextBlock}" Text="{x:Bind Title}" />
+				<TextBlock Style="{StaticResource DescriptionTextBlock}" Text="{x:Bind Description}" />
+			</StackPanel>
+		</Grid>
+	</Grid>
 </Page>
