--- a/SJCAM/SJCAM/Style/Style.xaml
+++ b/SJCAM/SJCAM/Style/Style.xaml
@@ -23,6 +23,13 @@
 		<Setter Property="TextAlignment" Value="DetectFromContent" />
 		<Setter Property="Margin" Value="10" />
 	</Style>
+	<Style x:Key="StatusBarTextBlock" TargetType="TextBlock">
+		<Setter Property="FontSize" Value="10" />
+		<Setter Property="Foreground" Value="WhiteSmoke" />
+		<Setter Property="HorizontalAlignment" Value="Center" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+		<Setter Property="Margin" Value="6" />
+	</Style>
 	<Style x:Key="GridMainTextBlock" TargetType="TextBlock" BasedOn="{StaticResource DescriptionTextBlock}">
 		<Setter Property="FontSize" Value="17" />
 		<Setter Property="HorizontalAlignment" Value="Center" />
