--- a/SJCAM/SJCAM/MainPage.xaml
+++ b/SJCAM/SJCAM/MainPage.xaml
@@ -3,23 +3,38 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SJCAM"
+	xmlns:Set="using:SJCAM.Logic.Settings"
+	xmlns:Controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	<UserControl.Transitions>
+		<TransitionCollection>
+			<EdgeUIThemeTransition Edge="Top"/>
+		</TransitionCollection>
+	</UserControl.Transitions>
+
+	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 		<Image Source="background.jpg" Stretch="UniformToFill" HorizontalAlignment="Center" Loaded="Image_Loaded"/>
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition />
 			</Grid.RowDefinitions>
+			<Grid.ChildrenTransitions>
+				<TransitionCollection>
+					<EdgeUIThemeTransition Edge="top" />
+				</TransitionCollection>
+			</Grid.ChildrenTransitions>
 			<!--Connection status-->
-			<Grid Grid.Row="0" Name="ConnectStatusBar" HorizontalAlignment="Stretch">
+			<Grid Grid.Row="0" Name="ConnectStatusBar" HorizontalAlignment="Stretch" Visibility="{x:Bind connectionBarVisibility}">
+				
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="Auto" />
 					<ColumnDefinition />
 				</Grid.ColumnDefinitions>
+
 				<TextBlock Style="{StaticResource StatusBarTextBlock}" Text="{x:Bind ConnectionStatusText}" />
 				<ProgressBar Grid.Column="1" Name="ConnectStatusProgressBar" IsIndeterminate="True" Margin="10" HorizontalAlignment="Stretch" Maximum="10"/>
 			</Grid>
@@ -27,6 +42,11 @@
 			<StackPanel Name="MainStack" Grid.Row="1">
 				<TextBlock Style="{StaticResource TitleTextBlock}" Text="{x:Bind Title}" />
 				<TextBlock Style="{StaticResource DescriptionTextBlock}" Text="{x:Bind Description}" />
+				<ListView ItemsSource="{x:Bind ListSettings}">
+					<DataTemplate x:DataType="Set:Setting">
+						<TextBlock Text="{x:Bind Description}"/>
+					</DataTemplate>
+				</ListView>
 			</StackPanel>
 		</Grid>
 	</Grid>
