End of MVP + Glossy #1

--- a/SJCAM/SJCAM/MainPage.xaml
+++ b/SJCAM/SJCAM/MainPage.xaml
@@ -40,9 +40,14 @@
 			<StackPanel Name="MainStack" Grid.Row="1">
 				<TextBlock Style="{StaticResource TitleTextBlock}" Text="{x:Bind Title}" />
 				<TextBlock Style="{StaticResource DescriptionTextBlock}" Text="{x:Bind Description}" />
-				<StackPanel Name="CanvasPlace">
-					
-				</StackPanel>
+				<ScrollViewer VerticalScrollMode="Enabled" IsEnabled="True" IsVerticalScrollChainingEnabled="True" IsVerticalRailEnabled="True" Height="{Binding ElementName=MainStack, Path=ActualHeight}">
+					<StackPanel Name="CanvasPlace">
+						<TextBox PlaceholderText="Enter Cmd" Name="Cmd" />
+						<TextBox PlaceholderText="Enter Param" Name="Param"/>
+						<Button Content="Test" Click="Button_Click" />
+						<TextBlock Text="" Name="TestBox"/>
+					</StackPanel>
+				</ScrollViewer>
 			</StackPanel>
 			
 			<!--Bottom-->
