--- a/SJCAM/SJCAM/Custom/VideoControl.xaml
+++ b/SJCAM/SJCAM/Custom/VideoControl.xaml
@@ -1,25 +1,27 @@
 ﻿<UserControl
-    x:Class="SJCAM.Custom.PhotoControl"
+    x:Class="SJCAM.Custom.VideoControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SJCAM.Custom"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
 
-    <Grid>
-		<ScrollViewer VerticalScrollMode="Enabled" IsEnabled="True" IsVerticalScrollChainingEnabled="True" IsVerticalRailEnabled="True">
+	<Grid>
+		<ScrollViewer VerticalScrollMode="Enabled" IsEnabled="True" IsVerticalScrollChainingEnabled="True" IsVerticalRailEnabled="True" Height="{Binding ElementName=MainStack, Path=ActualHeight}">
 			<StackPanel>
 				<StackPanel.ChildrenTransitions>
 					<TransitionCollection>
-						<EdgeUIThemeTransition Edge="Top"/>
+						<EdgeUIThemeTransition Edge="top" />
 					</TransitionCollection>
 				</StackPanel.ChildrenTransitions>
 				<ComboBox Name="ResolutionCombo" HorizontalAlignment="Center" Margin="20" PlaceholderText="Resolution" ItemsSource="{x:Bind ResolutionString}" SelectionChanged="ResolutionCombo_SelectionChanged">
 
 				</ComboBox>
 				<ProgressRing Width="100" Height="100" Visibility="Collapsed" Name="Ring" IsActive="True" Foreground="WhiteSmoke"/>
-				<Button Style="{StaticResource StdButton}" Content="Snap" Click="Button_ClickAsync" Name="SnapButton"/>
+				<TextBlock Style="{StaticResource DescriptionTextBlock}" Name="Remain" Text="{x:Bind RemainingTime, Mode=TwoWay}"/>
+				<Button Style="{StaticResource StdButton}" Content="Start" Click="Button_ClickAsync" Name="SnapButton"/>
+				<MediaElement Source="rtsp://192.168.1.254/sjcam.mp4" AutoPlay="True" AreTransportControlsEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinHeight="200" MinWidth="350"/>
 			</StackPanel>
 		</ScrollViewer>
 	</Grid>
