--- a/SJCAM/SJCAM/Style/Style.xaml
+++ b/SJCAM/SJCAM/Style/Style.xaml
@@ -13,6 +13,11 @@
 		<Setter Property="HorizontalAlignment" Value="Center" />
 		<Setter Property="VerticalAlignment" Value="Center" />
 		<Setter Property="Margin" Value="20,20,20,0" />
+		<Setter Property="TextWrapping" Value="Wrap" />
+	</Style>
+	<Style x:Key="PopupTitleTextBlock" TargetType="TextBlock" BasedOn="{StaticResource TitleTextBlock}">
+		<Setter Property="FontSize" Value="35" />
+		<Setter Property="Foreground" Value="Gray" />
 	</Style>
 	<Style x:Key="DescriptionTextBlock" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="20"/>
@@ -22,6 +27,7 @@
 		<Setter Property="TextWrapping" Value="Wrap" />
 		<Setter Property="TextAlignment" Value="DetectFromContent" />
 		<Setter Property="Margin" Value="10" />
+		<Setter Property="TextWrapping" Value="Wrap" />
 	</Style>
 	<Style x:Key="StatusBarTextBlock" TargetType="TextBlock">
 		<Setter Property="FontSize" Value="15" />
@@ -29,12 +35,14 @@
 		<Setter Property="HorizontalAlignment" Value="Center" />
 		<Setter Property="VerticalAlignment" Value="Center" />
 		<Setter Property="Margin" Value="10" />
+		<Setter Property="TextWrapping" Value="Wrap" />
 	</Style>
 	<Style x:Key="GridSettingTextBlock" TargetType="TextBlock" BasedOn="{StaticResource DescriptionTextBlock}">
 		<Setter Property="FontSize" Value="17" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
 		<Setter Property="VerticalAlignment" Value="Center" />
 		<Setter Property="Margin" Value="20,3,20,0" />
+		<Setter Property="TextWrapping" Value="Wrap" />
 	</Style>
 	<Style x:Key="GridMainIconTextBlock" TargetType="TextBlock" BasedOn="{StaticResource GridMainTextBlock}">
 		<Setter Property="FontSize" Value="90" />
@@ -48,6 +56,9 @@
 		<Setter Property="FontSize" Value="50" />
 		<Setter Property="Foreground" Value="WhiteSmoke" />
 		<Setter Property="FontFamily" Value="Segoe MDL2 Assets" />
+		<Setter Property="Background" Value="Transparent" />
+		<Setter Property="BorderThickness" Value="1" />
+		<Setter Property="BorderBrush" Value="WhiteSmoke"/>
 	</Style>
 	<Style x:Key="StdButton" TargetType="Button">
 		<Setter Property="Margin" Value="10" />
@@ -56,6 +67,12 @@
 		<Setter Property="Foreground" Value="WhiteSmoke" />
 		<Setter Property="Width" Value="100" />
 		<Setter Property="Height" Value="100" />
+	</Style>
+	<Style x:Key="WifiButton" TargetType="Button">
+		<Setter Property="Margin" Value="10" />
+		<Setter Property="HorizontalAlignment" Value="Stretch" />
+		<Setter Property="VerticalAlignment" Value="Stretch" />
+		<Setter Property="Foreground" Value="WhiteSmoke" />
 	</Style>
 	<!--TOGGLEBUTTON-->
 	<Style x:Key="OptionToggle" TargetType="ToggleButton">
