--- a/SJCAM/SJCAM/Custom/FilesControl.xaml
+++ b/SJCAM/SJCAM/Custom/FilesControl.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SJCAM.Custom"
+	xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -15,7 +16,24 @@
 						<EdgeUIThemeTransition Edge="Top"/>
 					</TransitionCollection>
 				</StackPanel.ChildrenTransitions>
-				
+				<Pivot>
+					<PivotItem Header="Photo" Foreground="WhiteSmoke">
+						<GridView Name="PhotoGrid" ItemsSource="{x:Bind Photo}">
+							<GridView.ItemTemplate>
+								<DataTemplate x:DataType="x:String">
+									<Grid Margin="3">
+										<Image Source="{Binding}" Width="130" Height="130" Stretch="Fill"/>
+									</Grid>
+								</DataTemplate>
+							</GridView.ItemTemplate>
+						</GridView>
+					</PivotItem>
+					<PivotItem Header=" Video" Foreground="WhiteSmoke">
+						<GridView>
+							
+						</GridView>
+					</PivotItem>
+				</Pivot>
 			</StackPanel>
 		</ScrollViewer>
 	</Grid>
