--- a/SJCAM/SJCAM/Pages/ConnectionPage.xaml
+++ b/SJCAM/SJCAM/Pages/ConnectionPage.xaml
@@ -11,7 +11,36 @@
 		<Image Name="Background" Source="ms-appx:///Images/bg-colored.jpg" Stretch="UniformToFill"/>
 		<StackPanel Name="MainStack">
 			<TextBlock Style="{StaticResource TitleTextBlock}" Text="Connect to camera" />
+			<TextBlock Style="{StaticResource DescriptionTextBlock}" Text="Let's start to connect" />
+			<Border BorderBrush="DeepSkyBlue" Background="{StaticResource ApplicationPageBackgroundThemeBrush}" BorderThickness="1">
+				<Grid Background="#44444444" Name="PopupGrid">
+					<StackPanel Name="PopupStack">
+						<TextBlock Style="{StaticResource PopupTitleTextBlock}" Text="Select a camera" />
+						<TextBlock Style="{StaticResource DescriptionTextBlock}" Foreground="Gray" Text="We wasn't able to automaticaly connect to your SJCAM action camera, choose the wifi below"/>
 
+						<ListView Name="WifiListView"  ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollMode="Enabled" ScrollViewer.IsVerticalRailEnabled="True" Height="500" SelectionChanged="WifiListView_SelectionChanged">
+							<ListView.ItemTemplate>
+								<DataTemplate>
+									<StackPanel Orientation="Horizontal">
+										<TextBlock Text="{Binding SSID}"/>
+									</StackPanel>
+								</DataTemplate>
+							</ListView.ItemTemplate>
+						</ListView>
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition />
+								<ColumnDefinition />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<Button Grid.Column="0" IsEnabled="False" Name="ValidateWifiButton" Style="{StaticResource WifiButton}" Content="Ok" Click="ValidateWifiButton_Click"/>
+							<Button Grid.Column="1" Name="CancelButton" Style="{StaticResource WifiButton}" Content="Cancel" Click="CancelButton_Click"/>
+							<Button Grid.Column="2" Name="RefreshButton" FontFamily="Segoe MDL2 Assets" Foreground="WhiteSmoke" Click="RefreshButton_Click" Content="&#xE117;" />
+						</Grid>
+					</StackPanel>
+					<ProgressRing Name="PopupRing" IsActive="True" Visibility="Collapsed" Width="200" Height="200"/>
+				</Grid>
+			</Border>
 		</StackPanel>
 	</Grid>
 </Page>
